// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiScreenReaderStatus it renders 1`] = `
<div
  aria-live="polite"
  class="euiScreenReaderOnly"
  role="status"
/>
`;

exports[`EuiScreenReaderStatus it sets \`statusMessage\` using document title 1`] = `
<EuiScreenReaderStatus>
  <EuiScreenReaderOnly>
    <div
      aria-live="polite"
      className="euiScreenReaderOnly"
      role="status"
    >
      Default title
    </div>
  </EuiScreenReaderOnly>
</EuiScreenReaderStatus>
`;

exports[`EuiScreenReaderStatus it sets \`statusMessage\` with user defined string 1`] = `
<EuiScreenReaderStatus
  statusMessage="User-defined title"
>
  <EuiScreenReaderOnly>
    <div
      aria-live="polite"
      className="euiScreenReaderOnly"
      role="status"
    >
      User-defined title
    </div>
  </EuiScreenReaderOnly>
</EuiScreenReaderStatus>
`;

exports[`EuiScreenReaderStatus it sets aria-live and tabindex correctly when \`shouldReceiveFocus\` is passed 1`] = `
<EuiScreenReaderStatus
  shouldReceiveFocus={true}
  statusMessage="User-defined title"
>
  <EuiScreenReaderOnly>
    <div
      aria-live="off"
      className="euiScreenReaderOnly"
      role="status"
      tabIndex={-1}
    >
      User-defined title
    </div>
  </EuiScreenReaderOnly>
</EuiScreenReaderStatus>
`;
